--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
+    "react-native-textarea": "^1.0.4",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2"
   },
